--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="#">Download Excursion (Coming Soon!)</a>
+    <p><video autoplay muted loop src="./resources/videos/excursion.mp4"></video></p>
     <footer>
 
     </footer>
