--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <head>
- <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <a href="#">Download Excursion (Coming Soon!)</a>
-    <p><video autoplay muted loop src="./resources/videos/excursion.mp4"></video></p>
-    <footer>
-
-    </footer>
+    <p>
+        <video autoplay muted loop src="./resources/videos/excursion.mp4"></video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>
+        <img src="./resources/images/camp.jpg">
+    </p>
+    <p>
+        <img src="./resources/images/phone.png">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="#">Download Excursion (Coming Soon!)</a>
+    <p class="footer">@Excursion</p>
 </body>
